--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,61 +4,13 @@ on:
   push:
     branches:
       - main
-
-permissions:
-  contents: read
-  packages: write
-  pull-requests: write
-  issues: write
-
 env:
   REGISTRY: docker.io
   IMAGE_NAME: lukas8219/rinha-de-backend-2025
 
 jobs:
-  validate-ssh-key:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.9.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Test SSH connection to GitHub
-        run: |
-          echo "🔑 Testing SSH connection to GitHub..."
-          
-          # Test basic GitHub SSH connection
-          SSH_OUTPUT=$(ssh -T git@github.com 2>&1 || true)
-          echo "SSH Output: $SSH_OUTPUT"
-          
-          # Check if authentication was successful
-          if echo "$SSH_OUTPUT" | grep -q "successfully authenticated"; then
-            echo "✅ SSH key is valid for GitHub"
-            
-            # Extract username from the output
-            USERNAME=$(echo "$SSH_OUTPUT" | grep "successfully authenticated" | sed 's/.*Hi \([^!]*\)!.*/\1/')
-            echo "🎉 Authenticated as: $USERNAME"
-          else
-            echo "❌ SSH key validation failed"
-            echo "Expected to see 'successfully authenticated' in the output"
-            echo "Actual output: $SSH_OUTPUT"
-            exit 1
-          fi
-          
-          echo "🔍 Testing access to fork repository..."
-          # Test if we can access the specific repository
-          git ls-remote git@github.com:lukas8219/rinha-de-backend-2026.git HEAD > /dev/null 2>&1 && {
-            echo "✅ Successfully accessed fork repository"
-          } || {
-            echo "❌ Cannot access fork repository - check if SSH key has proper permissions"
-            exit 1
-          }
-
   build-and-push:
     runs-on: ubuntu-latest
-    needs: validate-ssh-key
     outputs:
       app-image-tag: ${{ steps.set_outputs.outputs.app-image-tag }}
       worker-image-tag: ${{ steps.set_outputs.outputs.worker-image-tag }}
@@ -128,149 +80,11 @@ jobs:
           echo "📦 Final image tags written to output:"
           echo "  App image: $APP_IMAGE_TAG"
           echo "  Worker image: $WORKER_IMAGE_TAG"
-
-  update-fork:
-    runs-on: ubuntu-latest
-    needs: [validate-ssh-key, build-and-push]
-    
-    steps:
-      - name: Checkout current repository
-        uses: actions/checkout@v3
-
-      - name: Checkout fork repository
-        uses: actions/checkout@v3
-        with:
-          repository: lukas8219/rinha-de-backend-2026
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          path: fork-repo
-
-      - name: Generate branch name
-        id: gen_branch
-        run: |
-          BRANCH_NAME="automate-pr-$(date +%Y%m%d-%H%M%S)"
-          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
-          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
-
-      - name: Configure git
-        run: |
-          cd fork-repo
-          git config user.name "GitHub Actions[lukas8219]"
-          git config user.email "lukas8219@gmail.com"
-
-      - name: Create and checkout new branch
-        run: |
-          cd fork-repo
-          git checkout -b ${{ env.BRANCH_NAME }}
-
-
-      - name: Create modified docker-compose with image tags
-        env:
-          APP_IMAGE: ${{ needs.build-and-push.outputs.app-image-tag }}
-          WORKER_IMAGE: ${{ needs.build-and-push.outputs.worker-image-tag }}
-        run: |
-          echo "🔍 Debug: Job outputs received as environment variables:"
-          echo "APP_IMAGE: '$APP_IMAGE'"
-          echo "WORKER_IMAGE: '$WORKER_IMAGE'"
           
-          echo "🔧 Creating modified docker-compose.yaml with image tags:"
-          echo "  App services will use: $APP_IMAGE"
-          echo "  Worker service will use: $WORKER_IMAGE"
-          
-          # Debug: Check if image tags are properly received
-          if [[ -z "$APP_IMAGE" ]] || [[ -z "$WORKER_IMAGE" ]]; then
-            echo "❌ Error: Image tags are empty!"
-            echo "APP_IMAGE: '$APP_IMAGE'"
-            echo "WORKER_IMAGE: '$WORKER_IMAGE'"
-            echo "Length of APP_IMAGE: ${#APP_IMAGE}"
-            echo "Length of WORKER_IMAGE: ${#WORKER_IMAGE}"
-            
-            echo ""
-            echo "🔍 Checking job dependency and outputs..."
-            echo "Job needs: [validate-ssh-key, build-and-push]"
-            echo "build-and-push job should have these outputs:"
-            echo "  - app-image-tag"
-            echo "  - worker-image-tag"
-            exit 1
-          fi
-          
-          # Install yq if not available
-          if ! command -v yq &> /dev/null; then
-            echo "📦 Installing yq..."
-            sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-            sudo chmod +x /usr/local/bin/yq
-          fi
-          
-          # Copy original file
-          cp docker-compose.yaml docker-compose-modified.yaml
-          
-          # Remove build sections and add image tags using yq
-          echo "🔧 Modifying docker-compose.yaml with yq..."
-          
-          # For app1 service (base app definition) - remove build and add image
-          yq eval 'del(.services.app1.build)' -i docker-compose-modified.yaml
-          yq eval '.services.app1.image = strenv(APP_IMAGE)' -i docker-compose-modified.yaml
-          
-          # For consumer service - remove build and add image
-          yq eval 'del(.services.consumer.build)' -i docker-compose-modified.yaml
-          yq eval '.services.consumer.image = strenv(WORKER_IMAGE)' -i docker-compose-modified.yaml
-          
-          # Fix any !!merge syntax issues (yq sometimes outputs this incorrectly)
-          sed -i 's/!!merge <</<</' docker-compose-modified.yaml
-          
-          echo "✅ Modified docker-compose.yaml created"
-          
-          # Show a preview of the changes made
           echo ""
-          echo "📋 Preview of modified services:"
-          echo "--- app1 service image ---"
-          yq eval '.services.app1.image' docker-compose-modified.yaml
-          echo "--- consumer service image ---"  
-          yq eval '.services.consumer.image' docker-compose-modified.yaml
-          
-          # Validate YAML syntax
-          echo ""
-          echo "🔍 Validating YAML syntax..."
-          if yq eval '.' docker-compose-modified.yaml > /dev/null; then
-            echo "✅ YAML syntax is valid"
-          else
-            echo "❌ YAML syntax is invalid"
-            exit 1
-          fi
+          echo "💡 To update your submission with these images, use the 'Update Submission' workflow:"
+          echo "   Go to Actions → Update Submission → Run workflow"
+          echo "   Use these image tags as inputs:"
+          echo "   - App image tag: $APP_IMAGE_TAG"
+          echo "   - Worker image tag: $WORKER_IMAGE_TAG"
 
-      - name: Clean up files and update docker-compose
-        run: |
-          cd fork-repo
-          # Remove *.logs and *.json files from participantes/luucaspole-crystal/
-          if [ -d "participantes/luucaspole-crystal" ]; then
-            find participantes/luucaspole-crystal -name "*.logs" -type f -delete
-            find participantes/luucaspole-crystal -name "partial-results.json" -type f -delete
-            echo "Removed *.logs and *.json files from participantes/luucaspole-crystal/"
-          else
-            echo "Directory participantes/luucaspole-crystal does not exist, creating it..."
-            mkdir -p participantes/luucaspole-crystal
-          fi
-          
-          # Copy modified docker-compose.yaml and nginx.conf from current repo to fork
-          cp ../docker-compose-modified.yaml participantes/luucaspole-crystal/docker-compose.yaml
-          cp ../nginx.conf participantes/luucaspole-crystal/nginx.conf
-          echo "Updated docker-compose.yaml with production image tags in participantes/luucaspole-crystal/"
-
-      - name: Commit and push changes
-        run: |
-          cd fork-repo
-          git add -A
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore(participantes/luucaspole-crystal): retest + use latest configuration and version
-            
-            - Removed *.logs and *.json files from participantes/luucaspole-crystal/
-            - Updated docker-compose.yaml with production image tags
-            - App image: ${{ needs.build-and-push.outputs.app-image-tag }}
-            - Worker image: ${{ needs.build-and-push.outputs.worker-image-tag }}
-            - Updated nginx.conf with latest version
-            - Generated from SHA: ${{ github.sha }}"
-            
-            git push origin ${{ env.BRANCH_NAME }}
-            echo "Changes pushed to branch: ${{ env.BRANCH_NAME }}"
-          fi
