--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,16 +10,16 @@ version: '3.4'
 services:
   app1: &app
     image: docker.io/lukas8219/rinha-de-backend-2025-app:latest
+    user: "1001:1001"
     build:
       context: .
       target: app
     hostname: app1
     restart: unless-stopped
+    ipc: host
     environment:
       <<: *x-enviromments
-      SOCKET_PATH: "/shared/sockets/app1.sock"
-    volumes:
-      - unix_sockets:/shared/sockets
+      SOCKET_PATH: "/dev/shm/app1.sock"
     networks:
       - backend
       - payment-processor
@@ -42,11 +42,11 @@ services:
           memory: '50MB'
   app2:
     <<: *app
+    user: "1001:1001"
+    ipc: host
     environment:
       <<: *x-enviromments
-      SOCKET_PATH: "/shared/sockets/app2.sock"
-    volumes:
-      - unix_sockets:/shared/sockets
+      SOCKET_PATH: "/dev/shm/app2.sock"
     hostname: app2
     depends_on:
       lavinmq:
@@ -56,20 +56,21 @@ services:
 
   consumer: &consumer
     <<: *app
+    user: "1001:1001"
     hostname: "1"
+    ipc: host
+    cpuset: "0"
     environment:
       <<: *x-enviromments
-      SOCKET_PATH: "/shared/sockets/1.sock"
-    volumes:
-      - unix_sockets:/shared/sockets
+      SOCKET_PATH: "/dev/shm/1.sock"
     cpu_shares: 3072
     deploy:
       resources:
         limits:
-          cpus: '0.9'
+          cpus: '1'
           memory: '150MB'
         reservations:
-          cpus: '0.9'
+          cpus: '1'
           memory: '150MB'
     image: docker.io/lukas8219/rinha-de-backend-2025-worker:latest
     build:
@@ -104,9 +105,13 @@ services:
 
   nginx: # Load Balancer
     image: nginx:latest
+    user: "1001:1001"
+    ipc: host
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - unix_sockets:/shared/sockets
+      - nginx_cache:/var/cache/nginx
+      - nginx_run:/var/run
+      - nginx_log:/var/log/nginx
     depends_on:
       - app1
       - app2
@@ -122,6 +127,7 @@ services:
     networks:
       - backend
     cpu_shares: 2048
+    cpuset: "1"
     deploy:
       resources:
         limits:
@@ -131,11 +137,25 @@ services:
           cpus: '0.1'
           memory: '35MB'
 
-
-
 volumes:
-  unix_sockets:
+  nginx_cache:
     driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
+  nginx_run:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
+  nginx_log:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
 
 networks:
   backend:
