--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ x-enviromments: &x-enviromments
 version: '3.4'
 services:
   app1: &app
-    image: docker.io/lukas8219/rinha-de-backend-2025-app:latest
+    image: docker.io/lukas8219/rinha-de-backend-2025-app:main-79807011a-1753481819
     user: "1001:1001"
     build:
       context: .
@@ -72,7 +72,7 @@ services:
         reservations:
           cpus: '1'
           memory: '150MB'
-    image: docker.io/lukas8219/rinha-de-backend-2025-worker:latest
+    image: docker.io/lukas8219/rinha-de-backend-2025-worker:main-79807011a-1753481819
     build:
       context: .
       target: worker
