--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,8 @@ events {
 }
 
 http {
-    error_log /var/log/nginx/error.log error;
-    access_log /var/log/nginx/access.log combined if=$non_200;
-
-    map $status $non_200 {
-        200 0;
-        default 1;
-    }
+    error_log /dev/null emerg;
+    access_log off;
 
     upstream api {
         server unix:/dev/shm/app1.sock;
