--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ pingora = { version = "0.5", features = [ "lb" ] }
 log="0.4.27"
 env_logger="0.11.8"
 pingora-load-balancing = "0.5.0"
+http = "1.3.1"
