perf(pingora): change loadbalancing strategy to stable performance with pingora (#40)
* [wip] start trying pingora as the LB

* [wip] LB algorithms are not working for UDS-based peers yet

* [wip] test pingora in CI

* perf(pingora): keep on using pingora for performance

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -118,7 +118,7 @@ services:
       - lavinmq
       - consumer
     ports:
-      - "9999:9999"
+      - "9998:9999"
     ulimits:
       nproc: 1000000
       nofile:
@@ -128,6 +128,37 @@ services:
       - backend
     cpu_shares: 2048
     cpuset: "1"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: '55MB'
+        reservations:
+          cpus: '0.1'
+          memory: '55MB'
+
+  pingora: # Pingora Load Balancer
+    build:
+      context: .
+      dockerfile: Dockerfile.pingora
+    user: "1001:1001"
+    ipc: host
+    depends_on:
+      - app1
+      - app2
+      - lavinmq
+      - consumer
+    ports:
+      - "9999:9998"
+    ulimits:
+      nproc: 1000000
+      nofile:
+        soft: 1000000
+        hard: 1000000
+    networks:
+      - backend
+    cpu_shares: 2048
+    cpuset: "2"
     deploy:
       resources:
         limits:
