chore(ci): enable parallel + cache from

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     build:
       context: .
       target: app
+      cache_from:
+        - docker.io/lukas8219/rinha-de-backend-2025-app:latest
     hostname: app1
     restart: unless-stopped
     ipc: host
@@ -76,6 +78,8 @@ services:
     build:
       context: .
       target: worker
+      cache_from: 
+        - docker.io/lukas8219/rinha-de-backend-2025-worker:latest
     depends_on:
       lavinmq:
         condition: service_healthy
