--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,9 @@ jobs:
   k6-test:
     runs-on: ubuntu-latest
     permissions: write-all
+    env:
+      MAX_REQUESTS: 550
+      COMPOSE_PARALLEL_LIMIT: -1
 
     steps:
       - name: Checkout code
@@ -34,7 +37,9 @@ jobs:
         run: sleep 5
 
       - name: Build and start services
-        run: docker-compose up -d --build
+        run: |
+         docker-compose build --parallel
+         docker-compose up -d
 
       - name: Wait for services to be healthy
         run: |
