--- a/.github/workflows/update-submission.yaml
+++ b/.github/workflows/update-submission.yaml
@@ -75,6 +75,8 @@ jobs:
       - name: Create and checkout new branch
         run: |
           cd fork-repo
+          git remote add zan https://github.com/zanfranceschi/rinha-de-backend-2025.git
+          git rebase zan/main;
           git checkout -B ${{ env.BRANCH_NAME }}
 
           
