--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,64 +51,64 @@ services:
       SOCKET_PATH: "/dev/shm/app2.sock"
     hostname: app2
 
-  # pingora: # Pingora Load Balancer
-  #   image: docker.io/lukas8219/rinha-de-backend-2025-load-balancer-pingora:pingora-0b7f83e5a-1753557406
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.pingora
-  #     cache_from:
-  #        - docker.io/lukas8219/rinha-de-backend-2025-load-balancer-pingora:latest
-  #   user: "1001:1001"
-  #   ipc: host
-  #   security_opt:
-  #     - seccomp=unconfined
-  #   environment:
-  #     PORT: "9999"
-  #   depends_on:
-  #     - app1
-  #     - app2
-  #   ports:
-  #     - "9999:9999"
-  #   ulimits:
-  #     nproc: 1000000
-  #     nofile:
-  #       soft: 1000000
-  #       hard: 1000000
-  #   networks:
-  #     - backend
-  #   cpu_shares: 2048
-  #   cpuset: "2"
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: '0.3'
-  #         memory: '55MB'
-  #       reservations:
-  #         cpus: '0.3'
-  #         memory: '55MB'
-
-  nginx:
-    image: nginx:latest
+  pingora: # Pingora Load Balancer
+    image: docker.io/lukas8219/rinha-de-backend-2025-load-balancer-pingora:pingora-0b7f83e5a-1753557406
+    build:
+      context: .
+      dockerfile: Dockerfile.pingora
+      cache_from:
+         - docker.io/lukas8219/rinha-de-backend-2025-load-balancer-pingora:latest
     user: "1001:1001"
     ipc: host
+    security_opt:
+      - seccomp=unconfined
+    environment:
+      PORT: "9999"
+    depends_on:
+      - app1
+      - app2
+    ports:
+      - "9999:9999"
+    ulimits:
+      nproc: 1000000
+      nofile:
+        soft: 1000000
+        hard: 1000000
     networks:
       - backend
-    ports:
-      - "9998:9999"
-    volumes:
-      - nginx_cache:/var/cache/nginx
-      - nginx_log:/var/log/nginx
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    cpu_shares: 1024
-    cpuset: "3"
+    cpu_shares: 2048
+    cpuset: "2"
     deploy:
       resources:
         limits:
-          cpus: '0.1'
+          cpus: '0.3'
           memory: '55MB'
         reservations:
-          cpus: '0.1'
+          cpus: '0.3'
           memory: '55MB'
+
+  # nginx:
+  #   image: nginx:latest
+  #   user: "1001:1001"
+  #   ipc: host
+  #   networks:
+  #     - backend
+  #   ports:
+  #     - "9999:9999"
+  #   volumes:
+  #     - nginx_cache:/var/cache/nginx
+  #     - nginx_log:/var/log/nginx
+  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #   cpu_shares: 1024
+  #   cpuset: "3"
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: '0.1'
+  #         memory: '55MB'
+  #       reservations:
+  #         cpus: '0.1'
+  #         memory: '55MB'
 
 volumes:
   nginx_cache:
