--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
     build:
       context: .
       target: app
+      cache_from:
+        - docker.io/lukas8219/rinha-de-backend-2025-app:latest
+        - gha
     hostname: app1
     restart: unless-stopped
     ipc: host
@@ -77,6 +80,9 @@ services:
     build:
       context: .
       target: worker
+      cache_from:
+        - docker.io/lukas8219/rinha-de-backend-2025-worker:latest
+        - gha
     depends_on:
       lavinmq:
         condition: service_healthy
