--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,10 +72,10 @@ services:
       resources:
         limits:
           cpus: '1'
-          memory: '150MB'
+          memory: '80MB'
         reservations:
           cpus: '1'
-          memory: '150MB'
+          memory: '80MB'
     image: docker.io/lukas8219/rinha-de-backend-2025-worker:main-a52e7a23e-1753551398
     build:
       context: .
@@ -128,14 +128,16 @@ services:
         hard: 1000000
     networks:
       - backend
+    cpuset: "1"
+    cpu_shares: 2048
     deploy:
       resources:
         limits:
           cpus: '0.1'
-          memory: '55MB'
+          memory: '120MB'
         reservations:
           cpus: '0.1'
-          memory: '55MB'
+          memory: '120MB'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - nginx_cache:/var/cache/nginx
