--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
-    worker_connections 2048;
+    worker_connections 8192;
     use epoll;
     multi_accept on;
 }
